force-app/main/default/objects/Flight__c/Flight__c.object-meta.xml
<CustomObject>
    <description>Stores operational information for each arriving or departing flight, including schedule, operational status, aircraft assignment, gate assignment, and related ground operations.</description>
    <label>Flight</label>
    <nameField>
        <displayFormat>FLT-{00000}</displayFormat>
        <label>Flight Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>