force-app/main/default/objects/Flight__c/fields/Actual_Arrival__c.field-meta.xml
<CustomField>
    <fullName>Actual_Arrival__c</fullName>
    <label>Actual Arrival</label>
    <type>DateTime</type>
</CustomField>