force-app/main/default/objects/Flight__c/fields/Actual_Departure__c.field-meta.xml
<CustomField>
    <fullName>Actual_Departure__c</fullName>
    <label>Actual Departure</label>
    <type>DateTime</type>
</CustomField>