force-app/main/default/objects/Flight__c/fields/Airline__c.field-meta.xml
<CustomField>
    <fullName>Airline__c</fullName>
    <label>Airline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Air India</fullName>
            </value>
            <value>
                <fullName>IndiGo</fullName>
            </value>
            <value>
                <fullName>SpiceJet</fullName>
            </value>
            <value>
                <fullName>Akasa Air</fullName>
            </value>
            <value>
                <fullName>Air India Express</fullName>
            </value>
            <value>
                <fullName>Emirates</fullName>
            </value>
            <value>
                <fullName>Qatar Airways</fullName>
            </value>
            <value>
                <fullName>Singapore Airlines</fullName>
            </value>
            <value>
                <fullName>Lufthansa</fullName>
            </value>
            <value>
                <fullName>British Airways</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>