force-app/main/default/objects/Flight__c/fields/Flight_Type__c.field-meta.xml
<CustomField>
    <fullName>Flight_Type__c</fullName>
    <label>Flight Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arrival</fullName>
            </value>
            <value>
                <fullName>Departure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>