force-app/main/default/objects/Flight__c/fields/Gate__c.field-meta.xml
<CustomField>
    <fullName>Gate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gate</label>
    <referenceTo>Gate__c</referenceTo>
    <relationshipLabel>Flights</relationshipLabel>
    <relationshipName>Flights</relationshipName>
    <type>Lookup</type>
</CustomField>