force-app/main/default/objects/Flight__c/fields/Scheduled_Arrival__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Arrival__c</fullName>
    <label>Scheduled Arrival</label>
    <type>DateTime</type>
</CustomField>