force-app/main/default/objects/Flight__c/fields/Scheduled_Departure__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Departure__c</fullName>
    <label>Scheduled Departure</label>
    <type>DateTime</type>
</CustomField>