force-app/main/default/objects/Flight__c/validationRules/Actual_Departure_After_Actual_Arrival.validationRule-meta.xml
<ValidationRule>
    <fullName>Actual_Departure_After_Actual_Arrival</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(Actual_Arrival__c)),
NOT(ISBLANK(Actual_Departure__c)),
Actual_Departure__c &lt;= Actual_Arrival__c
)</errorConditionFormula>
    <errorDisplayField>Actual_Departure__c</errorDisplayField>
    <errorMessage>Actual Departure must be after Actual Arrival.</errorMessage>
</ValidationRule>