force-app/main/default/objects/Flight__c/validationRules/Delay_Reason_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Delay_Reason_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c,&quot;Delayed&quot;),
ISBLANK(Delay_Reason__c)
)</errorConditionFormula>
    <errorDisplayField>Delay_Reason__c</errorDisplayField>
    <errorMessage>Delay Reason is mandatory when Flight Status is Delayed.</errorMessage>
</ValidationRule>