force-app/main/default/objects/Flight__c/validationRules/Passenger_Count_Cannot_Be_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Passenger_Count_Cannot_Be_Negative</fullName>
    <active>true</active>
    <errorConditionFormula>Passenger_Count__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Passenger_Count__c</errorDisplayField>
    <errorMessage>Passenger Count cannot be negative.</errorMessage>
</ValidationRule>